added draggable item

--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
       </section>
       <!-- FUTURE SECTION -->
       <section class="future">
+        <img id="deb1" class="draggable" src="images/debris1.png" alt="" />
         <h2>WHAT WILL HAPPEN?</h2>
         <p>What will happen if we don't do anything to solve this problem?</p>
         <article>
